--- a/frontend/app/views/spree/products/_filters_mobile.html.erb
+++ b/frontend/app/views/spree/products/_filters_mobile.html.erb
@@ -1,7 +1,7 @@
 <% is_visible = params[:menu_open] ? 'block' : 'none' %>
 
 <% cache [@option_types, permitted_params, is_visible] do %>
-  <div id="filter-by-overlay" class="d-sm-none plp-overlay" style="display: <%= is_visible %>;">
+  <div id="filter-by-overlay" class="d-lg-none plp-overlay" style="display: <%= is_visible %>;">
     <div class="plp-scroll">
       <div class="container">
         <div class="plp-overlay-header">
