--- a/frontend/app/assets/stylesheets/spree/frontend/views/spree/products/index.scss
+++ b/frontend/app/assets/stylesheets/spree/frontend/views/spree/products/index.scss
@@ -1,6 +1,6 @@
 .plp {
   &-not-found-header {
-    color: theme-color('dark-text');
+    color: theme-color("dark-text");
     font-size: font-px-to-rem(18px);
     font-weight: 500;
     letter-spacing: 0.45px;
@@ -29,7 +29,7 @@
   }
 
   &-not-found-text {
-    color: theme-color('dark-text');
+    color: theme-color("dark-text");
     margin-bottom: 350px;
     font-size: font-px-to-rem(14px);
     font-weight: 500;
@@ -49,8 +49,8 @@
     height: 60px;
     display: flex;
     align-items: center;
-    color: theme-color('dark-text');
-    @include media-breakpoint-up('md') {
+    color: theme-color("dark-text");
+    @include media-breakpoint-up("md") {
       font-size: font-px-to-rem(32px);
     }
   }
@@ -59,21 +59,21 @@
     &-horizontal-border {
       border-width: 1px 0px;
       border-style: solid;
-      border-color: theme-color('dark-borders');
+      border-color: theme-color("dark-borders");
     }
 
     &-vertical-border {
-      border-right: 1px solid theme-color('dark-borders');
+      border-right: 1px solid theme-color("dark-borders");
     }
 
     &-buttons {
-      color: theme-color('dark-text');
+      color: theme-color("dark-text");
       display: flex;
       align-items: center;
       justify-content: space-between;
       height: 45px;
       font-size: font-px-to-rem(14px);
-      @include media-breakpoint-up('md') {
+      @include media-breakpoint-up("md") {
         height: 88px;
         font-size: font-px-to-rem(22px);
       }
@@ -81,13 +81,15 @@
   }
 
   &-icon {
-    @include media-breakpoint-down('md') {
+    @include media-breakpoint-down("md") {
       height: 30%;
       width: auto;
     }
   }
 
   &-filters {
+    top: $spree-plp-filter-desktop-position;
+    left: 0;
     &-card {
       border: none;
       a:hover {
@@ -100,7 +102,7 @@
         }
       }
       &-header {
-        background-color: theme-color('light-background');
+        background-color: theme-color("light-background");
         cursor: pointer;
         font-size: font-px-to-rem(17px);
         font-weight: bold;
@@ -119,12 +121,12 @@
         }
       }
       &-item {
-        border: solid 1px theme-color('borders');
-        color: theme-color('dark-text');
+        border: solid 1px theme-color("borders");
+        color: theme-color("dark-text");
         font-size: font-px-to-rem(16px);
         font-weight: 500;
         &--selected {
-          border: solid 2px theme-color('dark-text');
+          border: solid 2px theme-color("dark-text");
         }
       }
     }
@@ -149,7 +151,7 @@
         &-li--active {
           list-style: none;
           a {
-            color: theme-color('dark-text');
+            color: theme-color("dark-text");
           }
         }
         &-li--active {
@@ -183,13 +185,13 @@
       }
     }
     a {
-      color: theme-color('dark-text');
+      color: theme-color("dark-text");
       padding: 0.385rem 0.7rem;
     }
   }
 
   &-overlay {
-    color: theme-color('dark-text');
+    color: theme-color("dark-text");
     position: fixed;
     width: 100%;
     height: 100%;
@@ -198,7 +200,7 @@
     right: 0;
     bottom: 0;
     z-index: 999;
-    background-color: theme-color('light-background');
+    background-color: theme-color("light-background");
 
     &-header {
       height: 60px;
@@ -208,7 +210,7 @@
       font-size: font-px-to-rem(18px);
 
       &-border {
-        border-top: 1px solid theme-color('dark-borders');
+        border-top: 1px solid theme-color("dark-borders");
       }
     }
 
@@ -225,13 +227,13 @@
             height: 12px;
             margin-top: 2px;
             margin-left: 2px;
-            background-color: theme-color('secondary');
-            border: solid 1px theme-color('secondary');
+            background-color: theme-color("secondary");
+            border: solid 1px theme-color("secondary");
             border-radius: 50%;
           }
         }
         a {
-          color: theme-color('dark-text');
+          color: theme-color("dark-text");
           &:hover {
             text-decoration: none;
           }
@@ -244,32 +246,32 @@
 
     &-card {
       border: none;
-      border-top: solid 1px theme-color('borders');
+      border-top: solid 1px theme-color("borders");
       &-header.collapsed {
         .arrow {
           transform: rotate(90deg);
         }
       }
       &-header {
-        background-color: theme-color('light-background');
+        background-color: theme-color("light-background");
         border-bottom: none;
         cursor: pointer;
         &-arrow {
-          color: theme-color('dark-test');
+          color: theme-color("dark-test");
           transform: rotate(-90deg);
         }
       }
 
       &-item {
-        border: solid 1px theme-color('borders');
-        color: theme-color('dark-text');
+        border: solid 1px theme-color("borders");
+        color: theme-color("dark-text");
         font-size: font-px-to-rem(13px);
         &--selected {
-          border: solid 2px theme-color('dark-text');
+          border: solid 2px theme-color("dark-text");
         }
       }
       &:last-of-type {
-        border-bottom: solid 1px theme-color('borders');
+        border-bottom: solid 1px theme-color("borders");
       }
       a:hover {
         text-decoration: none;
@@ -288,8 +290,8 @@
   }
 
   &-empty-dot {
-    background-color: theme-color('light-background');
-    border: solid 1px theme-color('secondary');
+    background-color: theme-color("light-background");
+    border: solid 1px theme-color("secondary");
     border-radius: 50%;
     display: inline-block;
     margin-right: 16px;
