[SD-603] Adds edit links on checkout confirm page

--- a/frontend/app/assets/stylesheets/spree/frontend/views/spree/checkout/confirm.scss
+++ b/frontend/app/assets/stylesheets/spree/frontend/views/spree/checkout/confirm.scss
@@ -123,6 +123,15 @@
       letter-spacing: 0.35px;
     }
 
+    &-link {
+      @include media-breakpoint-between(sm, md) {
+        svg {
+          height: 30px;
+          width: 30px;
+        }
+      }
+    }
+
     @include media-breakpoint-up(sm) {
       font-size: font-px-to-rem(30px);
       &-header {
