--- a/frontend/app/views/spree/products/index.html.erb
+++ b/frontend/app/views/spree/products/index.html.erb
@@ -36,7 +36,7 @@
         <div class="row">
           <% cache(params.permit!.merge(current_currency: current_currency)) do %>
             <% @products.each do |product| %>
-              <div id="product_<%= product.id %>" class="col-lg-6 col-sm-4 col-6 mb-3 mb-md-4 pr-0 pl-md-4 pl-sm-4">
+              <div id="product_<%= product.id %>" class="col-sm-4 col-6 mb-3 mb-md-4 pr-0 pl-md-4 pl-sm-4">
                 <%= render 'spree/shared/product', product: product, image_class: 'product-component-plp-image' %>
               </div>
             <% end %>
