--- a/frontend/app/views/spree/shared/_translations.html.erb
+++ b/frontend/app/views/spree/shared/_translations.html.erb
@@ -3,7 +3,8 @@
       Spree.translations = <%==
     {
       coupon_code_applied: Spree.t(:coupon_code_applied),
-      coupon_code_removed: Spree.t(:coupon_code_removed)
+      coupon_code_removed: Spree.t(:coupon_code_removed),
+      coupon_code_error_icon: image_path('error.svg')
     }.to_json
   %>
   });
