[SD-632] Fixes quantity not showing up on desktop checkout/confirm

--- a/frontend/app/assets/stylesheets/spree/frontend/views/spree/checkout/confirm.scss
+++ b/frontend/app/assets/stylesheets/spree/frontend/views/spree/checkout/confirm.scss
@@ -99,7 +99,7 @@
       align-items: center;
       font-size: 26px;
 
-      &-qty > span {
+      &-qty > span:first-child {
         display: none;
       }
 
