--- a/frontend/app/views/spree/checkout/_confirm.html.erb
+++ b/frontend/app/views/spree/checkout/_confirm.html.erb
@@ -1,38 +1,5 @@
 <div class="checkout-confirm" id="order_details" data-hook>
-  <h5 class="text-uppercase checkout-content-header">
-    <%= Spree.t(:summary) %>
-  </h5>
-  <h4 class="d-none d-sm-block d-lg-none checkout-content-subheader">
-    <%= Spree.t(:products) %>
-  </h4>
-  <div class="checkout-confirm-products">
-    <span class="text-uppercase mb-1 checkout-confirm-th"><%= Spree.t('checkout_page.product') %></span>
-    <span class="text-uppercase mb-1 checkout-confirm-th"><%= Spree.t(:price) %></span>
-    <span class="text-uppercase mb-1 checkout-confirm-th"><%= Spree.t(:quantity) %></span>
-    <span class="text-uppercase mb-1 checkout-confirm-th"><%= Spree.t(:total) %></span>
-    <% @order.line_items.each do |item| %>
-      <div class="checkout-confirm-product">
-        <%= link_to plp_and_carousel_image(item.product), item.product %>
-
-        <div class="checkout-confirm-product-desc">
-          <div class="checkout-confirm-product-name">
-            <div><%= item.name %></div>
-          </div>
-          <div class="checkout-confirm-product-price">
-            <%= item.single_money.to_html %>
-          </div>
-          <div class="checkout-confirm-product-qty">
-            <span><%= Spree.t(:quantity) %>:</span>
-            <span class="font-weight-bold">&nbsp;<%= item.quantity %></span>
-          </div>
-          <div class="checkout-confirm-product-total">
-            <%= item.display_amount.to_html %>
-          </div>
-         </div>
-      </div>
-    <% end %>
-  </div>
-  <div class="checkout-confirm-delivery-informations">
+  <div class="checkout-confirm-delivery-informations text-center">
     <div class="d-lg-none checkout-confirm-delivery-informations-header">
       <%= Spree.t(:delivery_information) %>
     </div>
@@ -73,5 +40,54 @@
         </dd>
       </div>
     </dl>
+  </div>
+</div>
+
+<div class='order-show container d-flex flex-column align-items-center align-items-lg-start flex-lg-wrap flex-lg-row justify-content-center' id="order_summary" data-hook>
+  <div class="order-show-line-items d-flex flex-column align-items-center w-100">
+    <% @order.line_items.each do |item| %>
+      <div class="order-show-line-items-line-item d-flex">
+        <% if item.variant.images.length == 0 %>
+          <%= link_to product_image(item.variant.product), item.variant.product %>
+        <% else %>
+          <%= link_to image_tag(main_app.url_for(item.variant.images.first.url(:product))), item.variant.product %>
+        <% end %>
+        <div class="order-show-line-items-line-item-desc w-100">
+          <span class="order-show-line-items-line-item-desc-name">
+            <%= item.name %>
+          </span>
+          <span class="order-show-line-items-line-item-desc-subtitle d-none d-lg-block text-break">
+            <ul class="list-unstyled">
+              <% item.variant.option_values.sort { |ov| ov.option_type.position }.each do |ov| %>
+                <li><%= "#{ov.option_type.presentation}: #{ov.name.titleize}" %></li>
+              <% end %>
+            </ul>
+          </span>
+          <div class="order-show-line-items-line-item-desc-price">
+            <div class="order-show-line-items-line-item-desc-attr-name d-none d-lg-block">Price</div>
+            <div class="font-weight-bold"><%= item.single_money.to_html %></div>
+          </div>
+          <div class="order-show-line-items-line-item-desc-quantity">
+            <div class="order-show-line-items-line-item-desc-attr-name d-none d-lg-block">Quantity</div>
+            <div class="order-show-line-items-line-item-desc-attr-name d-inline d-lg-none">Quantity:</div>
+            <span class="order-show-line-items-line-item-desc-quantity-val d-lg-block"><%= item.quantity %></span>
+          </div>
+          <div class="order-show-line-items-line-item-desc-total d-none d-lg-block">
+            <div>Total</div>
+            <div class="font-weight-bold"><%= item.display_total.to_s %></div>
+          </div>
+        </div>
+      </div>
+    <% end %>
+  </div>
+  <div id="checkout-summary" class="w-100" data-hook="checkout_summary_box">
+    <%= render partial: 'spree/checkout/summary', locals: { order: @order } %>
+    <% if Spree::Frontend::Config[:coupon_codes_enabled] %>
+      <%= render 'spree/orders/coupon_code', promotion: @order.promotions.coupons.first, order_form: form, classes: '' %>
+    <% end %>
+    <div data-hook="buttons">
+      <% submit_label_key = @order.confirm? ? :place_order : :save_and_continue %>
+      <%= submit_tag Spree.t(submit_label_key), class: 'btn btn-primary text-uppercase font-weight-bold w-100 checkout-content-save-continue-button' %>
+    </div>
   </div>
 </div>
