--- a/frontend/app/views/spree/checkout/edit.html.erb
+++ b/frontend/app/views/spree/checkout/edit.html.erb
@@ -1,5 +1,4 @@
 <% @body_id = 'checkout-page' %>
-<% display_coupon_code = Spree::Frontend::Config[:coupon_codes_enabled] && @order.state == 'confirm' %>
 
 <div id="checkout" class="container checkout" data-hook>
   <%= render partial: 'spree/shared/error_messages', locals: { target: @order } %>
@@ -20,21 +19,15 @@
         <%= render @order.state, form: form %>
       </div>
 
-      <% if display_coupon_code %>
-        <%= render 'spree/orders/coupon_code',
-          promotion: @order.valid_coupon_promotions.first,
-          order_form: form,
-          classes: 'col-lg-4 my-4'
-        %>
-      <% end %>
-
-      <div id="checkout-summary" class="col-md-12 <%= display_coupon_code ? 'col-lg-4 offset-lg-4' : 'col-lg-auto' %>" data-hook="checkout_summary_box">
-        <%= render partial: 'summary', locals: { order: @order } %>
-        <div data-hook="buttons">
-          <% submit_label_key = @order.confirm? ? :place_order : :save_and_continue %>
-          <%= submit_tag Spree.t(submit_label_key), class: 'btn btn-primary text-uppercase font-weight-bold w-100 checkout-content-save-continue-button' %>
+      <% unless @order.confirm? %>
+        <div id="checkout-summary" class="col-md-12 col-lg-auto" data-hook="checkout_summary_box">
+          <%= render partial: 'summary', locals: { order: @order } %>
+          <div data-hook="buttons">
+            <% submit_label_key = @order.confirm? ? :place_order : :save_and_continue %>
+            <%= submit_tag Spree.t(submit_label_key), class: 'btn btn-primary text-uppercase font-weight-bold w-100 checkout-content-save-continue-button' %>
+          </div>
         </div>
-      </div>
+      <% end %>
     <% end %>
   </div>
 </div>
