--- a/frontend/app/views/spree/products/index.html.erb
+++ b/frontend/app/views/spree/products/index.html.erb
@@ -48,10 +48,7 @@
     <div class="container">
       <div class="row">
         <div class="col-12">
-          <div class="plp-pagination d-none d-lg-flex">
-            <%= paginate @products , theme: 'twitter-bootstrap-4' %>
-          </div>
-          <div class="plp-pagination d-lg-none">
+          <div class="plp-pagination">
             <%= paginate @products , window: 2, theme: 'twitter-bootstrap-4' %>
           </div>
         </div>
