--- a/frontend/app/views/spree/products/_filters_desktop.html.erb
+++ b/frontend/app/views/spree/products/_filters_desktop.html.erb
@@ -18,7 +18,12 @@
         </div>
         <div id="collapseFilter<%= option_type_name %>" class="collapse <%= 'show' unless params[ot_downcase_name].blank? %>" aria-labelledby="filters<%= option_type_name %>">
           <div class="card-body px-0 pt-1">
-            <%= render 'spree/shared/option_values', params_ot_downcase_name: params[ot_downcase_name], option_type: option_type, permitted_params: permitted_params, ot_downcase_name: ot_downcase_name %>
+            <%= render 'spree/shared/option_values',
+              params_ot_downcase_name: params[ot_downcase_name],
+              option_type: option_type,
+              permitted_params: permitted_params,
+              ot_downcase_name: ot_downcase_name
+            %>
           </div>
         </div>
       </div>
