--- a/frontend/app/views/spree/products/index.html.erb
+++ b/frontend/app/views/spree/products/index.html.erb
@@ -1,4 +1,4 @@
-<% permitted_params = params.permit(:color, :keywords, :price, :size, :sort_by) %>
+<% permitted_params = params.permit(*filtering_params) %>
 
 <div data-hook="search_results">
   <% if @products.empty? %>
