--- a/frontend/app/views/spree/shared/_carousel_product.html.erb
+++ b/frontend/app/views/spree/shared/_carousel_product.html.erb
@@ -1,5 +1,5 @@
 <%= link_to spree.product_path(product, taxon_id: @taxon&.id) do %>
-  <%= carousel_image(product, image_class) %>
+  <%= plp_and_carousel_image(product, image_class) %>
 
   <div class="product-component-name"><%= product.name %></div>
   <div class="product-component-price"><%= display_price(product) %></div>
