--- a/frontend/app/views/spree/taxons/show.html.erb
+++ b/frontend/app/views/spree/taxons/show.html.erb
@@ -1,7 +1,7 @@
 <div class="taxon">
   <div class="container">
     <%= spree_breadcrumbs(@taxon) %>
-    <div class="py-md-3 text-uppercase text-xl-center taxon-title"><%= @taxon.name %></div>
+    <div class="py-md-3 text-uppercase taxon-title"><%= @taxon.name %></div>
     <% unless @taxon.description.blank? %>
       <div class="py-3 py-md-0 taxon-description"><%= @taxon.description %></div>
     <% end %>
