--- a/frontend/app/assets/stylesheets/spree/frontend/views/spree/orders/edit.scss
+++ b/frontend/app/assets/stylesheets/spree/frontend/views/spree/orders/edit.scss
@@ -414,14 +414,15 @@
         line-height: 1;
       }
       @include media-breakpoint-up(lg) {
-        flex-basis: 50%;
+        height: 18px;
+        margin-top: 18px;
         margin-bottom: 34px;
         text-decoration: underline;
         color: theme-color("dark-text");
         font-weight: 500;
         font-size: font-px-to-rem(16px);
         letter-spacing: 0.4px;
-        line-height: 48px;
+        line-height: 16px;
         padding: 0;
         &:hover,
         &:focus {
