--- a/frontend/app/views/spree/products/index.html.erb
+++ b/frontend/app/views/spree/products/index.html.erb
@@ -2,10 +2,10 @@
 
 <div data-hook="search_results">
   <% if @products.empty? %>
-    <% if !params[:color].blank? || !params[:price].blank? || !params[:size].blank? %>
-      <%= render 'spree/products/no_results_with_filters', permitted_params: permitted_params %>
-    <% else %>
+    <% if permitted_params[:keywords].present? && permitted_params.to_h.one? %>
       <%= render 'spree/products/no_results' %>
+    <% else %>
+      <%= render 'spree/products/no_results_with_filters', permitted_params: permitted_params %>
     <% end %>
   <% else %>
     <% if params[:keywords] %>
