Make category navbar visible in subcategories

--- a/frontend/app/views/spree/taxons/show.html.erb
+++ b/frontend/app/views/spree/taxons/show.html.erb
@@ -17,7 +17,7 @@
       </div>
     <% end %>
   </div>
-  <%= render 'subcategories', taxon: @taxon %>
+  <%= render 'subcategories', parent_taxon: @taxon.parent, taxon: @taxon %>
   <div data-hook="taxon_products">
     <%= render template: 'spree/products/index', colors: @colors, sizes: @sizes %>
   </div>
