Align center pagination on Products list page

--- a/frontend/app/views/spree/products/index.html.erb
+++ b/frontend/app/views/spree/products/index.html.erb
@@ -42,14 +42,12 @@
             <% end %>
           <% end %>
         </div>
-      </div>
-    </div>
 
-    <div class="container">
-      <div class="row">
-        <div class="col-12">
-          <div class="plp-pagination d-none d-lg-flex">
-            <%= paginate @products , window: 2, theme: 'twitter-bootstrap-4' %>
+        <div class="row pl-md-4 pl-sm-4">
+          <div class="col-12">
+            <div class="plp-pagination d-none d-lg-flex">
+              <%= paginate @products, window: 2, theme: 'twitter-bootstrap-4' %>
+            </div>
           </div>
           <div class="plp-pagination d-lg-none">
             <%= paginate @products , window: 1, theme: 'twitter-bootstrap-4' %>
