--- a/frontend/app/views/spree/taxons/_subcategories.html.erb
+++ b/frontend/app/views/spree/taxons/_subcategories.html.erb
@@ -1,5 +1,5 @@
-<% [parent_taxon, taxon].map do |current_taxon| %>
-  <% child_taxons = current_taxon.children.to_a.unshift(current_taxon) %>
+<% [taxon.parent, taxon].each do |current_taxon| %>
+  <% child_taxons = [current_taxon, *current_taxon.children] %>
 
   <% if current_taxon.level > 0 && child_taxons.size > 1 %>
     <div class="d-flex justify-content-center position-sticky sticky-top-90px taxon-subcategories-wrapper">
