Changes edit.scss and edit.html.erb

--- a/frontend/app/assets/stylesheets/spree/frontend/views/spree/orders/edit.scss
+++ b/frontend/app/assets/stylesheets/spree/frontend/views/spree/orders/edit.scss
@@ -358,7 +358,7 @@
       margin-bottom: 36.2px;
     }
     @include media-breakpoint-up(lg) {
-      flex-basis: 50%;
+      margin-left: auto;
       margin-top: 0;
       margin-bottom: 34px;
     }
