--- a/frontend/app/views/spree/products/show.html.erb
+++ b/frontend/app/views/spree/products/show.html.erb
@@ -9,9 +9,9 @@
 
   <div class="container pt-4 product-details">
     <div class="modal fade" id="picturesModal" tabindex="-1" role="dialog" >
-      <div class="modal-dialog--zoom modal-dialog mw-100 h-100 mt-0 mb-0" role="document">
+      <div class="modal-dialog--zoom modal-dialog mw-100 vh-100 mt-0 mb-0" role="document">
         <div class="modal-content h-100">
-          <div class="modal-body d-flex flex-column">
+          <div class="modal-body">
             <button class="modal-close" type="button" class="close" data-dismiss="modal" aria-label="Close">
               <span aria-hidden="true">&#x2715;</span>
             </button>
