--- a/frontend/app/views/spree/products/index.html.erb
+++ b/frontend/app/views/spree/products/index.html.erb
@@ -68,37 +68,44 @@
   </div>
   <div class="plp-overlay-header-border"></div>
   <ul class="pt-1 plp-overlay-ul">
-    <li class="p-3 plp-overlay-ul-li<%= '--active' if params[:sort_by] == 'default' || params[:sort_by].blank? %>">
-      <a href="<%= url_for(permitted_params.merge(sort_by: 'default')) %>" >
-        <div class="plp-empty-dot">
-          <div class="filled-dot"></div>
-        </div>
+    <li class="p-3">
+      <% is_checked = params[:sort_by] == 'default' || params[:sort_by].blank? %>
+
+      <%= link_to url_for(permitted_params.merge(sort_by: 'default')), class: "spree-radio-label spree-sort-option #{'spree-sort-option--checked' if is_checked}" do %>
+        <%= radio_button_tag 'sort_by', 'default', is_checked %>
+        <span class="spree-radio-label-custom-input"></span>
         <%= Spree.t('plp.default') %>
-      </a>
+      <% end %>
     </li>
-    <li class="p-3 plp-overlay-ul-li<%= '--active' if params[:sort_by] == 'newest-first' %>">
-      <a href="<%= url_for(permitted_params.merge(sort_by: 'newest-first')) %>" >
-        <div class="plp-empty-dot">
-          <div class="filled-dot"></div>
-        </div>
+
+    <li class="p-3">
+      <% is_checked = params[:sort_by] == 'newest-first' %>
+
+      <%= link_to url_for(permitted_params.merge(sort_by: 'newest-first')), class: "spree-radio-label spree-sort-option #{'spree-sort-option--checked' if is_checked}" do %>
+        <%= radio_button_tag 'sort_by', 'newest-first', is_checked %>
+        <span class="spree-radio-label-custom-input"></span>
         <%= Spree.t('plp.newest_first') %>
-      </a>
+      <% end %>
     </li>
-    <li class="p-3 plp-overlay-ul-li<%= '--active' if params[:sort_by] == 'price-high-to-low' %>">
-      <a href="<%= url_for(permitted_params.merge(sort_by: 'price-high-to-low')) %>" >
-        <div class="plp-empty-dot">
-          <div class="filled-dot"></div>
-        </div>
+
+    <li class="p-3">
+      <% is_checked = params[:sort_by] == 'price-high-to-low' %>
+
+      <%= link_to url_for(permitted_params.merge(sort_by: 'price-high-to-low')), class: "spree-radio-label spree-sort-option #{'spree-sort-option--checked' if is_checked}" do %>
+        <%= radio_button_tag 'sort_by', 'price-high-to-low', is_checked %>
+        <span class="spree-radio-label-custom-input"></span>
         <%= Spree.t('plp.price_high_to_low') %>
-      </a>
+      <% end %>
     </li>
-    <li class="p-3 plp-overlay-ul-li<%= '--active' if params[:sort_by] == 'price-low-to-high' %>">
-      <a href="<%= url_for(permitted_params.merge(sort_by: 'price-low-to-high')) %>" >
-        <div class="plp-empty-dot">
-          <div class="filled-dot"></div>
-        </div>
+
+    <li class="p-3">
+      <% is_checked = params[:sort_by] == 'price-low-to-high' %>
+
+      <%= link_to url_for(permitted_params.merge(sort_by: 'price-low-to-high')), class: "spree-radio-label spree-sort-option #{'spree-sort-option--checked' if is_checked}" do %>
+        <%= radio_button_tag 'sort_by', 'price-low-to-high', is_checked %>
+        <span class="spree-radio-label-custom-input"></span>
         <%= Spree.t('plp.price_low_to_high') %>
-      </a>
+      <% end %>
     </li>
   </ul>
 </div>
